# maracluster

./: .gitignore  CMakeLists.txt  CPack.txt  ChangeLog  CommonCMake.txt  ReadMe.md  quickbuild.bat  quickbuild.sh  quickbuild64.bat
.github/workflows/: build_and_release.yml
admin/: add_license.sh  add_namespace.sh  dat_converters.py  get_download_stats.sh  install_proteowizard.sh  release_checklist.txt
admin/builders/: _init_msvc_.bat  _urls_and_file_names_.bat  centos64_build.sh  download_file.bat  download_file_macro.bat  fedora64_build.sh  install_proteowizard.bat  install_proteowizard.sh  install_qt.sh  nativew32_build.bat  nativew64_build.bat  osx64_build.sh  setup_env.bat  tarball64_build.sh  ubuntu64_build.sh
admin/nextflow/: file_list.txt  nf.config  params.txt  run_maracluster.nf  run_nextflow.sh
admin/vagrant/: ReadMe.md  batch.sh  manager.sh
cmake/: FindCassandra.cmake  FindProteoWizard.cmake  FindPthreads.cmake  VersionGen.cmake
src/: BatchGlobals.cpp  BatchGlobals.h  BatchPvalueVector.h  BatchPvalueVectors.cpp  BatchPvalueVectors.cu  BatchPvalueVectors.cuh  BatchPvalueVectors.h  BatchPvalues.cpp  BatchPvalues.h  BatchSpectra.cpp  BatchSpectra.h  BatchSpectrum.h  BatchSpectrumClusters.cpp  BatchSpectrumClusters.h  BatchSpectrumFiles.cpp  BatchSpectrumFiles.h  BatchStatement.h  BinAndRank.cpp  BinAndRank.h  BinSpectra.cpp  BinSpectra.h  BinaryFingerprintMethods.cpp  BinaryFingerprintMethods.h  BinaryInterface.h  CMakeLists.txt  ClusterMerge.cpp  ClusterMerge.h  Globals.cpp  Globals.h.cmake  InterpolationMerge.cpp  InterpolationMerge.h  MSClusterMerge.cpp  MSClusterMerge.h  MSFileExtractor.cpp  MSFileExtractor.h  MSFileHandler.cpp  MSFileHandler.h  MSFileMerger.cpp  MSFileMerger.h  MZIntensityPair.cpp  (+62 more)
src/qt-gui/: CMakeLists.txt  CPack.txt  LICENSE  NOTICE  install_qt.sh  install_qt_osx.sh  main.cpp  mainwidget.cpp  mainwidget.h  maracluster-gui.pro  osx64_build.sh  ubuntu64_build.sh
src/qt-gui/cmake/: FindICU.cmake
src/qt-gui/icon/: icon.xcf  maracluster.icns  png2hicolor.sh  png2icns.sh  png2ico.sh
src/qt-gui/packaging/: CMakeDMGSetup.scpt  mac_bg.tif  mac_bg.xcf  maracluster-gui.rc  maracluster.desktop.cmake
